--- a/cevirim/templates/index.html
+++ b/cevirim/templates/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Codey Translate</title>
+    <meta property="og:title" content="Codey Translate">
+    <meta property="og:description" content="Ücretsiz ve hızlı çeviri platformu.">
+    <meta property="og:image" content="https://codeytranslate.xyz/static/og-image.png">
+    <meta property="og:url" content="https://codeytranslate.xyz">
+
     <!-- Favicon -->
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <link id="theme-link" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
